@@ -7,6 +7,8 @@
 - cosmetic changes to nohalo
 - im_magick2vips() needs to invert alpha
 - now (more or less) passes -Wextra
+- added "fail" option to im_jpeg2vips: fail with an error on any warning
+  (thank you Ole)
 
 25/3/09 started 7.18.0
 - revised version numbers
